--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "yargs": "^17.7.2"
   },
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "typeorm": "typeorm-ts-node-commonjs -d src/config",
+    "migration:show": "npx typeorm migration:show",
+    "migration:create": "node scripts/migration-create.js",
+    "migration:revert": "npx typeorm migration:revert"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
